--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<java.version>12</java.version>
 		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
 		<org.projectlombok.version>1.18.8</org.projectlombok.version>
+		<io.jsonwebtoken.version>0.9.1</io.jsonwebtoken.version>
 	</properties>
 
 	<dependencies>
@@ -32,6 +33,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>io.jsonwebtoken</groupId>
+			<artifactId>jjwt</artifactId>
+			<version>${io.jsonwebtoken.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
