--- a/pom.xml
+++ b/pom.xml
@@ -16,8 +16,8 @@
 
 	<properties>
 		<java.version>12</java.version>
-		<org.mapstruct.version>1.3.0.Final</org.mapstruct.version>
-		<org.projectlombok.version>1.18.8</org.projectlombok.version>
+		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+		<org.projectlombok.version>1.18.10</org.projectlombok.version>
 		<io.jsonwebtoken.version>0.9.1</io.jsonwebtoken.version>
 		<com.fasterxml.jackson.datatype.version>2.9.9</com.fasterxml.jackson.datatype.version>
 	</properties>
@@ -72,6 +72,7 @@
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
+			<version>${org.projectlombok.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
