Реализован вывод компаний и списка последних добавленных отчетов на главную страницу

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
   mail:
     host: smtp.yandex.ru
     username: Andersen1313@yandex.ru
-    password: 1qaz!QAZ
+    password: 1qaz!QAZXC
     port: 465
     protocol: smtps
   session:
